[package]
name = "rust_euler"
version = "0.1.0"
authors = ["Michael Lancaster <mjl152@uclive.ac.nz>"]

[lib]
name = "rust_euler"
path = "src/lib.rs"

[[bin]]
name = "rust_euler_bin"
path = "src/main.rs"

[dependencies.num]
version = "0.1.25"
default-features = false

[dependencies]
docopt = "0.6"
time = "0.1"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`